[tool.poetry]
name = "tree-intersection"
version = "0.1.0"
description = ""
authors = ["Ahmed-Alanaswah <alanaswehahmed0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
linked_list = "^0.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
